new rendering only endpoint
